--- a/gsss.css
+++ b/gsss.css
@@ -80,7 +80,8 @@ text-align: center;}
   display: inline-block;
   font-size: 16px;
 padding: 10px 24px;
-
+width:200px;
+height:100px;
 
 }
 .button {
