--- a/gsss.css
+++ b/gsss.css
@@ -1,22 +1,26 @@
 body {
-  background-color:#ffffff;
+   
    
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
 }
 
-
-.topnav {
+.navbar {
+ list-style: none;
+  
+    margin-bottom: 10px;
+    width: 57.29%;
+    text-align: center;
+    background-color: #000000;
+    
   overflow: hidden;
-  background-color: #383838;
-  position: fixed;
-top: 0;
-left:0;
+  background-color: #333;
+
 }
 
-.topnav a{
-  float: left;
+.navbar a {
+float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -24,77 +28,56 @@ left:0;
   font-size: 17px;
 }
 
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-
-
-
-
-figcaption {
-    float: right;
-    clear: right;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 1.1rem;
-    line-height: 1.6;
-    vertical-align: baseline;
-    position: relative;
-    max-width: 40%;
-}
-
-figure.fullwidth figcaption {
-    margin-right: 54%;
-}
-
-
-
-
-a:link,
-a:visited 
-{
-    color: White;
-}
-#blog{
-
-padding:20px;
-margin:20px;
-font-family: Arial, sans-serif;
-font-size: 28px;
-font-weight: bold italic;
-text-align: center;}
- a{color: white;}
-
-#tofu{width:200; height:200;}
-.button {
-  
- background-color: #555555;
+.dropdown .dropbtn {
+  font-size: 16px;  
   border: none;
+  outline: none;
   color: white;
-  text-align: center;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+.navbar a.active {
+  background-color: red;
+  color: white;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-
-
-}
-.button {
-  transition-duration: 0.4s;
+  display: block;
+  text-align: left;
 }
 
-.button:hover {
-  background-color: #04AA6D; 
-  color: white;
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
-#container{display: flex;
-flex-wrap: wrap;}
-#container>div{margin:10px;
-padding:10px;}
-
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#container{display:flex;
+flex-wrap:wrap;}
 
 
 
