--- a/gsss.css
+++ b/gsss.css
@@ -78,6 +78,14 @@ float: left;
 }
 #container{display:flex;
 flex-wrap:wrap;}
+.mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
+}
 
 
 
