--- a/gsss.css
+++ b/gsss.css
@@ -60,6 +60,7 @@ float: left;
   z-index: 1;
 }
 
+
 .dropdown-content a {
   float: none;
   color: black;
@@ -71,6 +72,7 @@ float: left;
 
 .dropdown-content a:hover {
   background-color: #ddd;
+color:black;
 }
 
 .dropdown:hover .dropdown-content {
