--- a/main.css
+++ b/main.css
@@ -489,6 +489,7 @@ better{width:99%;
 border:1px solid grey;
 background-color: red;
 font: white;
+ padding:8px;
 font-size:15px;}
 #photo img {width:100px;}
 
