--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   }
 }
 body {
+
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -13,9 +14,10 @@ background:relative;
 
 background-color: white;
     color: black;
-    max-width: 98%;
-}
+    
 
+
+}
 table, th, td {
   border: 1px solid black;
 padding: 10px;
@@ -25,6 +27,19 @@ width:device-width;
   border-collapse: collapse;
 font-size: 18px;
 }
+
+cure { max-width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0%;
+   display:block;
+background:relative;
+
+background-color: white;
+    color: black;}
+
+
+
 #container {
 width:device-width;
   display: flex;
@@ -60,15 +75,22 @@ font-size:15px;}
 
 #better{width:99%;
 border:1px solid grey;
-background-color: red;
+background-color: #CA1919;
+padding:8px 6px;
 color: white;
 font-size:15px;
-border-radius:5px;}
+border-radius:5px;
+display:block;}
+
 a:link,
 a:visited 
 {
     color: inherit;
 }
+
+
+
+
 
 #ddmenu
 {
@@ -491,5 +513,14 @@ background-color: red;
 padding:8px;
 font: white;
 font-size:15px;}
+
+#better{width:auto;
+border:1px solid grey;
+background-color: red;
+padding:3px 3px;
+color: white;
+text-align:center;
+font-size:15px;
+border-radius:5px;}
 #photo img {width:100px;}
 
