--- a/Activities/main.css
+++ b/Activities/main.css
@@ -4,23 +4,94 @@
   }
 }
 body {
+
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 0%;
-    background-color: white;
+
+   margin:5px 0px 0px 0px;
 background:relative;
 
 background-color: white;
     color: black;
-    max-width: 95%;
+    
+
+
 }
+table, th, td {
+  border: 1px solid black;
+padding: 10px;
+margin: 10px;
+width:device-width;
+
+  border-collapse: collapse;
+font-size: 18px;
+}
+
+cure { max-width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0%;
+   display:block;
+background:relative;
+
+background-color: white;
+    color: black;}
+
+
+
+#container {
+width:device-width;
+  display: flex;
+gap: 50px;
+  flex-wrap: wrap;
+}
+
+button {
+border-radius: 20px;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 2px 2px;
+  cursor: pointer;
+background-color:blue;
+}
+footer {max-width:100%;
+border:1px solid grey;
+background-color: black;
+color: white;
+font-size:15px;}
+header
+{max-width:100%;
+border:1px solid grey;
+background-color: black;
+color: white;
+font-size:15px;}
+
+
+#better{width:99%;
+border:1px solid grey;
+background-color: #CA1919;
+padding:8px 6px;
+color: white;
+font-size:15px;
+border-radius:5px;
+display:block;}
 
 a:link,
 a:visited 
 {
     color: inherit;
 }
+
+
+
+
 
 #ddmenu
 {
@@ -266,6 +337,7 @@ border-right:1px solid #999;
   outline: 0;
   cursor: pointer;
   margin: 0 10px;
+max-width:95%;
 }
     /*override the original settings*/
     #ddmenu ul {
@@ -378,7 +450,16 @@ line-height: 35px;
     }
 
 
+cure { max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0%;
+   display:block;
+background:relative;
 
+
+background-color: white;
+    color: black;}
 
 
 #container {
@@ -387,14 +468,69 @@ line-height: 35px;
 }
 
 table, th, td {
-  border: 1px solid white;
-padding: 8px;
-margin: 5px;
+  border: 2px solid black;
+padding: 5px;
+margin: 3px;
 width:device-width;
-background-color: rgba(0,0,0,0.5);
+
   border-collapse: collapse;
+font-size:12px;
+margin:29px 0px 15px;
+}
+#container {
+width:99%;
+  display: flex;
+gap: 5px;
+  flex-wrap: wrap;
 }
 
+button {
+border-radius: 20px;
+  border: none;
+  color: white;
+  padding: 13px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  margin: 2px 2px;
+  cursor: pointer;
+background-color:blue;
 
 
+}
+iframe {width:99%;
+height:50%;
+ border:2px solid black; 
+ border:2px solid;
+ blackloadingL:"lazy"}
+ 
+footer {width:99%;
+border:1px solid grey;
+background-color: black;
+font: white;
+font-size:15px;}
+
+header {width:99%;
+border:1px solid grey;
+background-color: black;
+font: white;
+font-size:15px;}
+
+better{width:99%;
+border:1px solid grey;
+background-color: red;
+padding:8px;
+font: white;
+font-size:15px;}
+
+#better{width:auto;
+border:1px solid grey;
+background-color: red;
+padding:3px 3px;
+color: white;
+text-align:center;
+font-size:15px;
+border-radius:5px;}
+#photo img {width:100px;}
 
