--- a/Students_Section/main.css
+++ b/Students_Section/main.css
@@ -5,11 +5,12 @@
 }
 body {
 
-    max-width: 100%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 0%;
-   
+
+   margin:5px 0px 0px 0px;
 background:relative;
 
 background-color: white;
@@ -18,6 +19,16 @@ background-color: white;
 
 
 }
+table, th, td {
+  border: 1px solid black;
+padding: 10px;
+margin: 10px;
+width:device-width;
+
+  border-collapse: collapse;
+font-size: 18px;
+}
+
 cure { max-width: 98%;
     margin-left: auto;
     margin-right: auto;
@@ -29,15 +40,7 @@ background-color: white;
     color: black;}
 
 
-table, th, td {
-  border: 1px solid black;
-padding: 10px;
-margin: 10px;
-width:device-width;
 
-  border-collapse: collapse;
-font-size: 18px;
-}
 #container {
 width:device-width;
   display: flex;
@@ -447,7 +450,16 @@ line-height: 35px;
     }
 
 
+cure { max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0%;
+   display:block;
+background:relative;
 
+
+background-color: white;
+    color: black;}
 
 
 #container {
