--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-left: 0%;
-   
+
+   margin:5px 0px 0px 0px;
 background:relative;
 
 background-color: white;
