--- a/Features/main.css
+++ b/Features/main.css
@@ -27,6 +27,10 @@ font-family:"Times New Roman", Times, serif;}
  width:70%;
 border-radius:15px;
 }
+#object1 img{vertical-align: middle;
+ width:50%;
+border-radius:15px;
+}
 .text {
  
   font-size: 20px;
