--- a/Features/main.css
+++ b/Features/main.css
@@ -96,8 +96,8 @@ font-size:15px;}
 header
 {max-width:100%;
 border:1px solid grey;
-background-color: #EEB12C;
-color: red;
+background-color: #5F6BE0;
+color: white;
 font-size:15px;}
 
 
