--- a/main.css
+++ b/main.css
@@ -19,12 +19,16 @@ background-color: white;
 
 
 }
-h2{font-size:35px;
+h2{font-size:30px;
 font-family:"Times New Roman", Times, serif;}
 
 
 #object img{vertical-align: middle;
  width:70%;
+border-radius:15px;
+}
+#objectf img{vertical-align: middle;
+ width: 40%;
 border-radius:15px;
 }
 .text {
@@ -65,6 +69,27 @@ width:device-width;
 gap: 50px;
   flex-wrap: wrap;
 }
+.container1 {
+  width: 100%;
+  display: flex;
+ flex-wrap: wrap;
+gap:50px;
+}
+ .item {margin-left:25px;
+            width: 45%;
+            float: left;
+display:grid;
+
+
+        }
+.left-column {
+  width: 50%;
+}
+
+.right-column {
+  width: 50%;
+}
+
 
 button {
 border-radius: 20px;
@@ -108,32 +133,31 @@ a:visited
 }
 
 announcements {display:block;
-color:red;
-border:2px solid black;
+color:white;
+
 vertical-align: center;
   line-height:2em;
  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
  
-background-color:#EEB12C;
+background-color:#3E47A0;
 padding:6px 10px;
 margin:auto;
 border-radius:12px;
 }
 
 .anli  {display:block;
- border:2px solid grey;
- 
-background-color:#F5C256;
+background-color:#5F6BE0;
 
-color:red;
+color:white;
 text-align:center;
 font-family: EB Garamond;
 border-radius:13px;
 }
 
-hilight {color:blue;}
+hilight {color:blue;
+font-size:25px;}
 unlight {text-decoration: bold underline;
 color:blue;
 }
@@ -534,6 +558,16 @@ width:99%;
 gap: 5px;
   flex-wrap: wrap;
 }
+.container1 {
+  width: 100%;
+  display: flex;
+ flex-wrap: wrap;
+gap:50px;
+}
+ .item {margin-left:0px;
+            width: 100%;
+            float: left;
+display:grid;
 
 button {
 border-radius: 20px;
@@ -576,8 +610,9 @@ font: white;
 font-size:15px;}
 
 
-
-h2{font-size:20px;
+h1{font-size:10px;
+font-family:"Times New Roman", Times, serif;}
+h2{font-size:10px;
 font-family:"Times New Roman", Times, serif;}
 p{font-size:13px;}
 
@@ -607,4 +642,5 @@ border-radius:15px;
 color:black;
   text-align: center;
 }
+
 
