--- a/main.css
+++ b/main.css
@@ -89,7 +89,11 @@ display:grid;
 .right-column {
   width: 50%;
 }
-
+iframe {width:100%;
+height:65%;
+ border:2px solid black; 
+ border:2px solid;
+ blackloadingL:"lazy"}
 
 button {
 border-radius: 20px;
@@ -584,7 +588,7 @@ background-color:blue;
 
 
 }
-iframe {width:99%;
+iframe {width:90%;
 height:50%;
  border:2px solid black; 
  border:2px solid;
