--- a/main.css
+++ b/main.css
@@ -571,7 +571,7 @@ gap:50px;
  .item {margin-left:0px;
             width: 100%;
             float: left;
-display:grid;
+display:grid;}
 
 button {
 border-radius: 20px;
