--- a/main.css
+++ b/main.css
@@ -172,6 +172,37 @@ margin:auto;
 background-color:#3B8DE1;
 }
 
+block1 {display:block;
+color:black;
+
+vertical-align: center;
+  line-height:2em;
+
+  box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
+ 
+background-color:white;
+padding:6px 10px;
+margin:auto;
+border-radius:12px;}
+.roundimg {
+
+border-radius:47px;
+
+  box-shadow: 10px 10px 10px 5px rgba(0,0,0,0.75);
+
+
+
+
+}
+
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:;
+}
+
 #ddmenu
 {
     display:block;
@@ -598,13 +629,16 @@ footer {width:100%;
 border:1px solid grey;
 background-color: black;
 font: white;
-font-size:9px;}
+font-size:6px;
+}
+
 
 header {width:99%;
 border:1px solid grey;
 background-color: black;
 font: white;
-font-size:15px;}
+font-size:15px;
+}
 
 better{width:99%;
 border:1px solid grey;
@@ -643,5 +677,9 @@ border-radius:15px;
 color:black;
   text-align: center;
 }
+
+
+
+
 
 
