--- a/Academics/main.css
+++ b/Academics/main.css
@@ -13,12 +13,34 @@ body {
    margin:5px 0px 0px 0px;
 background:relative;
 
-background-color: white;
+
     color: black;
     
 
 
 }
+h1, h2, h3{
+font-family:"Times New Roman", Times, serif;}
+
+
+#object img{vertical-align: middle;
+ width:70%;
+border-radius:15px;
+}
+#object1 img{vertical-align: middle;
+ width:50%;
+border-radius:15px;
+}
+.text {
+ 
+  font-size: 20px;
+  padding: 6px 8px;
+  width: 100%;
+color:black;
+  text-align: center;
+}
+
+
 table, th, td {
   border: 1px solid black;
 padding: 10px;
@@ -27,6 +49,10 @@ width:device-width;
 
   border-collapse: collapse;
 font-size: 18px;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 cure { max-width: 98%;
@@ -48,6 +74,11 @@ gap: 50px;
   flex-wrap: wrap;
 }
 
+kr { display: block;
+ 
+border-top: 1px dashed black;
+   
+}
 button {
 border-radius: 20px;
   border: none;
@@ -69,9 +100,11 @@ font-size:15px;}
 header
 {max-width:100%;
 border:1px solid grey;
-background-color: black;
+background-color: #5F6BE0;
 color: white;
-font-size:15px;}
+font-size:15px;
+
+}
 
 
 #better{width:99%;
@@ -89,10 +122,45 @@ a:visited
     color: inherit;
 }
 
+announcements {display:block;
+color:red;
+border:2px solid black;
+vertical-align: center;
+  line-height:4em;
+ -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+ 
+background-color:#EEB12C;
+padding:6px 10px;
+margin:auto;
+border-radius:12px;
+}
 
+.anli  {display:block;
+ border:2px solid grey;
 
+background-color:#F5C256;
 
+color:red;
+text-align: inherit;
+font-family: EB Garamond;
+border-radius:12px;
+}
 
+hilight {color:blue;}
+unlight {text-decoration: bold underline;
+color:blue;
+}
+beauty {display:block;
+padding:8px 30px;
+margin:auto;
+
+background-color:#3B8DE1;
+}
+.gallery{
+border: 2px solid black;
+max-width:100%}
 #ddmenu
 {
     display:block;
@@ -466,9 +534,30 @@ background-color: white;
   display: flex;
   flex-wrap: wrap;
 }
+.container1 {
+  width: 100%;
+  display: flex;
+ flex-wrap: wrap;
+gap:50px;
+}
+ .item {margin-left:25px;
+            width: 33.33%;
+            float: left;
+display:grid;
+
+
+        }
+.left-column {
+  width: 50%;
+}
+
+.right-column {
+  width: 50%;
+}
+
 
 table, th, td {
-  border: 2px solid black;
+  border: 1px solid black;
 padding: 5px;
 margin: 3px;
 width:device-width;
@@ -480,7 +569,7 @@ margin:29px 0px 15px;
 #container {
 width:99%;
   display: flex;
-gap: 5px;
+gap: 10px;
   flex-wrap: wrap;
 }
 
@@ -505,16 +594,16 @@ height:50%;
  border:2px solid;
  blackloadingL:"lazy"}
  
-footer {width:99%;
+footer {width:100%;
 border:1px solid grey;
 background-color: black;
 font: white;
-font-size:15px;}
+font-size:11px;}
 
 header {width:99%;
 border:1px solid grey;
-background-color: black;
-font: white;
+background-color:  #5F6BE0;
+font: red;
 font-size:15px;}
 
 better{width:99%;
@@ -524,13 +613,42 @@ padding:8px;
 font: white;
 font-size:15px;}
 
+
+
+h2{font-size:20px;
+font-family:"Times New Roman", Times, serif;}
+p{font-size:13px;}
+
+
+
+
 #better{width:auto;
 border:1px solid grey;
 background-color: red;
 padding:3px 3px;
 color: white;
 text-align:center;
-font-size:15px;
+font-size:25px;
 border-radius:5px;}
-#photo img {width:100px;}
+
+
+#object img{vertical-align: middle;
+width:85%;
+border-radius:15px;
+}
+#person img {width:75px;}
+.text {
+ 
+  font-size: 13px;
+  padding: 6px 8px;
+  width: 100%;
+color:black;
+  text-align: center;
+}
+kr { 
+  display: block;
+ 
+border-top: 1px dashed black;
+
+} 
 
