--- a/Features/main.css
+++ b/Features/main.css
@@ -80,18 +80,47 @@ border-top: 1px dashed black;
    
 }
 button {
-border-radius: 20px;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
+width:60%;
+border-radius: 10px;
+  border-left: 5px solid skyblue;
+  color: black;
+  padding: 3px 11px;
+  text-align: left;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 14px;
-  margin: 2px 2px;
-  cursor: pointer;
-background-color:blue;
+  margin: auto;
+
+background-color:white;
+ box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
+button:hover
+{
+color:blue;
+    text-decoration:bold ;
+background-color: lightgrey;
+border-left: 5px solid blue;
+box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
+}
+
+button a {text-decoration:none;}
+
+
+block{
+width:90%;
+padding: 15px 32px;
+  background-color:white;
+ margin: auto;
+ display:inline-block;
+border:2px dashed black;
+}
+
+
+
+
+
+
+
 footer {max-width:100%;
 border:1px solid grey;
 background-color: black;
@@ -574,20 +603,30 @@ gap: 10px;
 }
 
 button {
-border-radius: 20px;
-  border: none;
-  color: white;
-  padding: 13px 28px;
-  text-align: center;
+width:60%;
+border-radius: 10px;
+  border-left: 5px solid skyblue;
+  color: black;
+  padding: 3px 11px;
+  text-align: left;
   text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  margin: 2px 2px;
-  cursor: pointer;
-background-color:blue;
+  display: block;
+  font-size: 14px;
+  margin: auto;
 
-
+background-color:white;
+ box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
+button:hover
+{
+color:blue;
+    text-decoration:bold ;
+background-color: lightgrey;
+border-left: 5px solid blue;
+box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
+}
+
+button a {text-decoration:none;}
 iframe {width:99%;
 height:50%;
  border:2px solid black; 
@@ -612,6 +651,14 @@ background-color: red;
 padding:8px;
 font: white;
 font-size:15px;}
+block{
+width:85%;
+padding: 5px 20px;
+  background-color:white;
+ margin: auto;
+ display:inline-block;
+border:2px dashed black;
+}
 
 
 
