--- a/Students_Section/main.css
+++ b/Students_Section/main.css
@@ -13,12 +13,34 @@ body {
    margin:5px 0px 0px 0px;
 background:relative;
 
-background-color: white;
+
     color: black;
     
 
 
 }
+h1, h2, h3{
+font-family:"Times New Roman", Times, serif;}
+
+
+#object img{vertical-align: middle;
+ width:70%;
+border-radius:15px;
+}
+#object1 img{vertical-align: middle;
+ width:50%;
+border-radius:15px;
+}
+.text {
+ 
+  font-size: 20px;
+  padding: 6px 8px;
+  width: 100%;
+color:black;
+  text-align: center;
+}
+
+
 table, th, td {
   border: 1px solid black;
 padding: 10px;
@@ -27,6 +49,10 @@ width:device-width;
 
   border-collapse: collapse;
 font-size: 18px;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 cure { max-width: 98%;
@@ -42,15 +68,33 @@ background-color: white;
 
 
 #container {
-width:device-width;
+width:100%;
   display: flex;
-gap: 50px;
+gap:50px;
   flex-wrap: wrap;
 }
+#container item {
+margin-left:5px;
+            width: 20%;
+            float: left;
+display:grid;
+}
+#container item1 {
+margin-left:5px;
+            width: 65%;
+            float: left;
+display:grid;
+}
 
+
+kr { display: block;
+ 
+border-top: 1px dashed black;
+   
+}
 button {
 border-radius: 20px;
-  border-left: 8px solid blue;
+  border-left: 5px solid skyblue;
   color: black;
   padding: 15px 32px;
   text-align: center;
@@ -59,19 +103,35 @@ border-radius: 20px;
   font-size: 14px;
   margin: 2px 2px;
   cursor: pointer;
-;
+background-color:white;
+ box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
+button:hover
+{
+    text-decoration:bold ;
+background-color: lightgrey;
+border-left: 5px solid blue;
+box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
+}
+
 footer {max-width:100%;
 border:1px solid grey;
 background-color: black;
 color: white;
-font-size:15px;}
+font-size:15px;
+  bottom:0;
+left:0;
+right:0;
+position:;}
 header
 {max-width:100%;
 border:1px solid grey;
-background-color: black;
+background-color: #5F6BE0;
 color: white;
-font-size:15px;}
+font-size:15px;
+  
+
+}
 
 
 #better{width:99%;
@@ -89,10 +149,65 @@ a:visited
     color: inherit;
 }
 
+announcements {display:block;
+color:red;
+border:2px solid black;
+vertical-align: center;
+  line-height:4em;
+ -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+ 
+background-color:#EEB12C;
+padding:6px 10px;
+margin:auto;
+border-radius:12px;
+}
 
 
 
+.anli  {display:block;
+ border:2px solid grey;
 
+background-color:#F5C256;
+
+color:red;
+text-align: inherit;
+font-family: EB Garamond;
+border-radius:12px;
+}
+
+hilight {color:blue;}
+unlight {text-decoration: bold underline;
+color:blue;
+}
+beauty {display:block;
+padding:8px 30px;
+margin:auto;
+
+background-color:#3B8DE1;
+}
+
+block1 {display:block;
+border: 2px solid #7e57c2;
+border-radius: 5px;
+background-color: #e3f2fd;
+padding:30px 30px;
+margin:auto}
+
+block2 {display:block;
+
+border: 2px dashed black;
+padding:30px 30px;
+margin:auto;
+border-right:2px solid transparent;
+
+}
+
+
+.gallery{
+border: 2px solid black;
+max-width:100%}
 #ddmenu
 {
     display:block;
@@ -466,6 +581,27 @@ background-color: white;
   display: flex;
   flex-wrap: wrap;
 }
+.container1 {
+  width: 100%;
+  display: flex;
+ flex-wrap: wrap;
+gap:50px;
+}
+ .item {margin-left:25px;
+            width: 33.33%;
+            float: left;
+display:grid;
+
+
+        }
+.left-column {
+  width: 50%;
+}
+
+.right-column {
+  width: 50%;
+}
+
 
 table, th, td {
   border: 1px solid black;
@@ -480,14 +616,31 @@ margin:29px 0px 15px;
 #container {
 width:99%;
   display: flex;
-gap: 5px;
+gap:30px;
   flex-wrap: wrap;
+}
+#container img{
+width:100px;
+   float: left;
+display:grid;
+}
+#container item {
+margin-left:5px;
+            width: 20%;
+            float: left;
+display:grid;
+}
+#container item1 {
+margin-left:5px;
+            width: 60%;
+            float: left;
+display:grid;
 }
 
 button {
 border-radius: 20px;
-  border-left: 6px solid blue;
-  color:black;
+  border-left: 3px solid skyblue;
+  color: black;
   padding: 13px 28px;
   text-align: center;
   text-decoration: none;
@@ -495,26 +648,46 @@ border-radius: 20px;
   font-size: 10px;
   margin: 2px 2px;
   cursor: pointer;
-
+background-color:white;
+box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 
 
 }
+
+
+button:hover
+{
+    text-decoration:bold ;
+background-color: lightgrey;
+border-left: 5px solid blue;
+box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
+}
+
+block1 {display:block;
+border: 2px solid #7e57c2;
+border-radius: 5px;
+
+background-color: #e3f2fd;}
+
+
+
 iframe {width:99%;
 height:50%;
  border:2px solid black; 
  border:2px solid;
  blackloadingL:"lazy"}
  
-footer {width:99%;
+footer {width:100%;
 border:1px solid grey;
 background-color: black;
 font: white;
-font-size:15px;}
+font-size:11px;
+}
 
 header {width:99%;
 border:1px solid grey;
-background-color: black;
-font: white;
+background-color:  #5F6BE0;
+font: red;
 font-size:15px;}
 
 better{width:99%;
@@ -524,13 +697,42 @@ padding:8px;
 font: white;
 font-size:15px;}
 
+
+
+h2{font-size:20px;
+font-family:"Times New Roman", Times, serif;}
+p{font-size:13px;}
+
+
+
+
 #better{width:auto;
 border:1px solid grey;
 background-color: red;
 padding:3px 3px;
 color: white;
 text-align:center;
-font-size:15px;
+font-size:25px;
 border-radius:5px;}
-#photo img {width:100px;}
+
+
+#object img{vertical-align: middle;
+width:85%;
+border-radius:15px;
+}
+#person img {width:75px;}
+.text {
+ 
+  font-size: 13px;
+  padding: 6px 8px;
+  width: 100%;
+color:black;
+  text-align: center;
+}
+kr { 
+  display: block;
+ 
+border-top: 1px dashed black;
+
+} 
 
