--- a/Features/main.css
+++ b/Features/main.css
@@ -80,20 +80,22 @@ border-top: 1px dashed black;
    
 }
 button {
-width:60%;
+width:60vw;
 border-radius: 10px;
   border-left: 5px solid skyblue;
   color: black;
-  padding: 3px 11px;
+  padding: 10px 20px;
   text-align: left;
   text-decoration: none;
-  display: block;
+  display: inline-block;
   font-size: 14px;
-  margin: auto;
+ box-sizing: border-box;
 
+cursor: pointer;
 background-color:white;
  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
+
 button:hover
 {
 color:blue;
@@ -102,8 +104,15 @@ background-color: lightgrey;
 border-left: 5px solid blue;
 box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
 }
+button a
+{
 
-button a {text-decoration:none;}
+    text-decoration:none;
+
+}
+
+
+
 
 
 block{
