--- a/Academics/main.css
+++ b/Academics/main.css
@@ -5,6 +5,8 @@
 }
 body {
 
+background-image: url("https://i.imgur.com/1JdPT8u.jpg");
+background-attachment:fixed;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -61,7 +63,8 @@ cure { max-width: 98%;
     padding-left: 0%;
    display:block;
 background:relative;
-
+background-attachment:fixed;
+background-image:url("https://i.imgur.com/1JdPT8u.jpg");
 background-color: white;
     color: black;}
 
