--- a/Features/gsss.css
+++ b/Features/gsss.css
@@ -31,16 +31,48 @@ border-top: 1px dashed black;
 Block {display:block;
 padding:8px 30px;
 margin:auto;
-border: 3px dashed blue;
+ box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
+background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(244,88,88,1) 62%, rgba(213,31,28,1) 100%);
 width:80%;
-}
-Block:hover {display:block;
-padding:8px 30px;
-margin:auto;
-border: 3px solid blue;
-width:80%;
+border-radius:15px;
+
 }
 
+Block1 {display:block;
+padding:8px 30px;
+margin:auto;
+ box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
+ background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(241,116,60,1) 62%, rgba(245,103,35,1) 100%); 
+width:80%;
+border-radius:15px;
+
+}
+
+
+Block2 {display:block;
+padding:8px 30px;
+margin:auto;
+ box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
+background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(95,195,95,1) 62%, rgba(51,180,49,1) 100%);
+width:80%;
+border-radius:15px;
+
+}
+
+Block3 {display:block;
+padding:8px 30px;
+margin:auto;
+ box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
+
+background: rgb(238,229,231);
+background: linear-gradient(90deg, rgba(238,229,231,1) 0%, rgba(193,196,192,1) 62%, rgba(175,179,176,1) 100%); 
+width:80%;
+border-radius:15px;
+
+}
 
 h1{ size: 50px;
 font-family:"Times New Roman", Times, serif;}
@@ -104,7 +136,7 @@ gap: 50px;
   width: 100%;
   display: flex;
  flex-wrap: wrap;
-gap:50px;
+gap:30px;
 }
  .item {margin-left:25px;
             width: 45%;
@@ -150,11 +182,14 @@ background-color: black;
 color: white;
 font-size:15px;}
 header
-{max-width:100%;
+{max-width:60%;
 border:1px solid grey;
-background-color: black;
+background-color: #5F6BE0;
+vertical-align:center;
+margin:auto;
 color: white;
-font-size:15px;}
+font-size:15px;
+}
 
 
 #better{width:99%;
@@ -208,18 +243,16 @@ margin:auto;
 background-color:#3B8DE1;
 }
 
-block1 {display:block;
-color:black;
 
-vertical-align: center;
-  line-height:2em;
 
-  box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
- 
-background-color:white;
-padding:6px 10px;
-margin:auto;
-border-radius:12px;}
+
+
+
+
+
+
+
+
 .roundimg {
 
 border-radius:47px;
@@ -670,7 +703,7 @@ font-size:6px;
 
 header {width:99%;
 border:1px solid grey;
-background-color: black;
+background-color: #5F6BE0;
 font: white;
 font-size:15px;
 }
@@ -712,6 +745,62 @@ border-radius:15px;
 color:black;
   text-align: center;
 }
+
+
+Block {display:block;
+padding:8px 30px;
+margin:auto;
+background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(233,127,127,1) 47%, rgba(240,90,88,1) 100%);
+width:80%;
+border-radius:15px;
+
+}
+
+Block1 {display:block;
+padding:8px 30px;
+margin:auto;
+ background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(241,116,60,1) 62%, rgba(245,103,35,1) 100%); 
+width:80%;
+border-radius:15px;
+
+}
+
+Block2 {display:block;
+padding:8px 30px;
+margin:auto;
+ background: rgb(222,224,224);
+background: rgb(222,224,224);
+background: linear-gradient(90deg, rgba(222,224,224,1) 0%, rgba(95,195,95,1) 62%, rgba(51,180,49,1) 100%);
+width:80%;
+border-radius:15px;
+
+}
+
+Block3 {display:block;
+padding:8px 30px;
+margin:auto;
+
+background: rgb(238,229,231);
+background: linear-gradient(90deg, rgba(238,229,231,1) 0%, rgba(193,196,192,1) 62%, rgba(175,179,176,1) 100%);
+width:80%;
+border-radius:15px;
+
+}
+
+
+block img {border-radius:15px;
+width:200px;}
+block1 img {border-radius:15px;
+width:150px;}
+
+block2 img {border-radius:15px;
+width:200px;}
+
+block3 img {border-radius:15px;
+width:200px;}
+
 
 
 
