--- a/main.css
+++ b/main.css
@@ -16,11 +16,32 @@ background:relative;
 
 background-color: white;
     color: black;
-    
+  
 
 
 }
-h2{font-size:30px;
+kr { display: block;
+ 
+border-top: 1px dashed black;
+   
+}
+
+
+Block {display:block;
+padding:8px 30px;
+margin:auto;
+border: 3px dashed blue;
+width:80%;
+}
+Block:hover {display:block;
+padding:8px 30px;
+margin:auto;
+border: 3px solid blue;
+width:80%;
+}
+
+
+h1{ size: 50px;
 font-family:"Times New Roman", Times, serif;}
 
 
@@ -51,6 +72,12 @@ width:device-width;
   border-collapse: collapse;
 font-size: 18px;
 }
+
+table.center{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 cure { max-width: 98%;
     margin-left: auto;
@@ -92,6 +119,11 @@ display:grid;
 .right-column {
   width: 50%;
 }
+
+
+
+
+
 iframe {width:100%;
 height:65%;
  border:2px solid black; 
