--- a/Features/gsss.css
+++ b/Features/gsss.css
@@ -136,9 +136,16 @@ gap: 50px;
   width: 100%;
   display: flex;
  flex-wrap: wrap;
-gap:30px;
+gap:10px;
 }
  .item {margin-left:25px;
+            width: 45%;
+            float: left;
+display:grid;
+
+
+        }
+.item1 {margin-left:25px;
             width: 45%;
             float: left;
 display:grid;
