--- a/Features/Clubs/main.css
+++ b/Features/Clubs/main.css
@@ -21,72 +21,6 @@ background:relative;
 
 
 }
-
-grandblock {display:block;
-padding:8px 30px;
-margin:auto;
- box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
-background: rgb(108,102,195);
-background: linear-gradient(90deg, rgba(108,102,195,1) 3%, rgba(177,177,247,1) 51%, rgba(172,224,235,1) 76%);
-background-attachment:fixed;
-width:90%;
-border-radius:5px;
-}
-.container2 {
-  width: 100%;
-  display: flex;
- flex-wrap: wrap;
-gap:10px;
-}
-
-
- .item1 {
-display:block;
-margin-left:30px;
-width: 28%;
-float: left;
-padding: 5px 8px;
-border: 1px solid grey;
-background: lightgrey;
-border-radius:15px;
-vertical-align:center;
-vertical-align:center;
- 
-        }
-.item1 img{ margin-top:20px;
-width:;
-
-        }
-
-.item1 :hover { 
-color:darkgrey;  
-
-        }
-
-
-
-.item1 a:link{ 
-color:black;
-text-decoration:none;        }
-
-
-
-.item1 a{ 
-color:blue;
-text-decoration:none;        }
-
-.item1 a:hover{ 
-color:blue;
-text-decoration:none;        }
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
-
 h1, h2, h3{
 font-family:"Times New Roman", Times, serif;}
 
@@ -137,24 +71,11 @@ background-color: white;
 
 
 #container {
-width:100%;
+width:device-width;
   display: flex;
-gap:50px;
+gap: 50px;
   flex-wrap: wrap;
 }
-#container item {
-margin-left:5px;
-            width: 20%;
-            float: left;
-display:grid;
-}
-#container item1 {
-margin-left:5px;
-            width: 65%;
-            float: left;
-display:grid;
-}
-
 
 kr { display: block;
  
@@ -162,43 +83,67 @@ border-top: 1px dashed black;
    
 }
 button {
-border-radius: 20px;
+width:60vw;
+border-radius: 10px;
   border-left: 5px solid skyblue;
   color: black;
-  padding: 15px 32px;
-  text-align: center;
+  padding: 10px 20px;
+  text-align: left;
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  margin: 2px 2px;
-  cursor: pointer;
+ box-sizing: border-box;
+
+cursor: pointer;
 background-color:white;
  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
+
 button:hover
 {
+color:blue;
     text-decoration:bold ;
 background-color: lightgrey;
 border-left: 5px solid blue;
 box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
 }
+button a
+{
+
+    text-decoration:none;
+
+}
+
+
+
+
+
+block{
+width:90%;
+padding: 15px 32px;
+  background-color:white;
+ margin: auto;
+ display:inline-block;
+border:2px dashed black;
+}
+
+
+
+
+
+
 
 footer {max-width:100%;
 border:1px solid grey;
 background-color: black;
 color: white;
-font-size:15px;
-  bottom:0;
-left:0;
-right:0;
-position:;}
+font-size:15px;}
 header
 {max-width:100%;
 border:1px solid grey;
 background-color: #5F6BE0;
 color: white;
 font-size:15px;
-  
 
 }
 
@@ -233,8 +178,6 @@ margin:auto;
 border-radius:12px;
 }
 
-
-
 .anli  {display:block;
  border:2px solid grey;
 
@@ -256,24 +199,6 @@ margin:auto;
 
 background-color:#3B8DE1;
 }
-
-block1 {display:block;
-border: 2px solid #7e57c2;
-border-radius: 5px;
-background-color: #e3f2fd;
-padding:30px 30px;
-margin:auto}
-
-block2 {display:block;
-
-border: 2px dashed black;
-padding:30px 30px;
-margin:auto;
-border-right:2px solid transparent;
-
-}
-
-
 .gallery{
 border: 2px solid black;
 max-width:100%}
@@ -685,61 +610,35 @@ margin:29px 0px 15px;
 #container {
 width:99%;
   display: flex;
-gap:30px;
+gap: 10px;
   flex-wrap: wrap;
-}
-#container img{
-width:100px;
-   float: left;
-display:grid;
-}
-#container item {
-margin-left:5px;
-            width: 20%;
-            float: left;
-display:grid;
-}
-#container item1 {
-margin-left:5px;
-            width: 60%;
-            float: left;
-display:grid;
 }
 
 button {
-border-radius: 20px;
-  border-left: 3px solid skyblue;
+width:60%;
+border-radius: 10px;
+  border-left: 5px solid skyblue;
   color: black;
-  padding: 13px 28px;
-  text-align: center;
+  padding: 3px 11px;
+  text-align: left;
   text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  margin: 2px 2px;
-  cursor: pointer;
+  display: block;
+  font-size: 14px;
+  margin: auto;
+
 background-color:white;
-box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
-
-
+ box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.75);
 }
-
-
 button:hover
 {
+color:blue;
     text-decoration:bold ;
 background-color: lightgrey;
 border-left: 5px solid blue;
 box-shadow: 5px 5px 5px 5px rgba(0,0,0,1);
 }
 
-block1 {display:block;
-border: 2px solid #7e57c2;
-border-radius: 5px;
-
-background-color: #e3f2fd;}
-
-
-
+button a {text-decoration:none;}
 iframe {width:99%;
 height:50%;
  border:2px solid black; 
@@ -750,8 +649,7 @@ footer {width:100%;
 border:1px solid grey;
 background-color: black;
 font: white;
-font-size:11px;
-}
+font-size:11px;}
 
 header {width:99%;
 border:1px solid grey;
@@ -765,6 +663,14 @@ background-color: red;
 padding:8px;
 font: white;
 font-size:15px;}
+block{
+width:85%;
+padding: 5px 20px;
+  background-color:white;
+ margin: auto;
+ display:inline-block;
+border:2px dashed black;
+}
 
 
 
@@ -804,72 +710,4 @@ kr {
 border-top: 1px dashed black;
 
 } 
-
-
-grandblock {display:block;
-padding:8px 15px;
-margin:auto;
- box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.75);
-background: rgb(108,102,195);
-background: linear-gradient(90deg, rgba(108,102,195,1) 3%, rgba(177,177,247,1) 51%, rgba(172,224,235,1) 76%);
-background-attachment:fixed;
-width:90%;
-border-radius:5px;
-}
-.container2 {
-  width: 85%;
-  display: flex;
- flex-wrap: wrap;
-gap:5px;
-}
-
-
- .item1 {
-display:block;
-margin-left:5px;
-width: 40%;
-float: left;
-padding: 15px 8px;
-padding-bottom:0px;
-border: 1px solid grey;
-background: lightgrey;
-border-radius:15px;
-vertical-align:center;
-vertical-align:center;
- 
-        }
-
-
-
-
-
-
-.item1 img{ margin:auto;
-width:100%;
-
-        }
-
-.item1 a:link
-
-{ 
-color:black;
-text-decoration:none;   }
-
-.item1 a:hover
-
-{ 
-color:blue;
-  }
-
-
-
-
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
 
